[package]
name = "grit"
version = "0.1.0"
authors = ["Duncan Dean <duncangleeddean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
deflate = "0.8.4"
rand = "0.7.3"
sha1 = "0.6.0"
sha2 = "0.8.1"
